--- a/index.ipynb
+++ b/index.ipynb
@@ -223,10 +223,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<folium.folium.Map object at 0x7f2e905fde48>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(buenos_map)"
+   ]
   },
   {
    "cell_type": "markdown",
