--- a/index.ipynb
+++ b/index.ipynb
@@ -223,9 +223,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<folium.folium.Map object at 0x7f2e905fde48>\n"
+     ]
+    }
+   ],
    "source": [
     "print(buenos_map)"
    ]
