--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = neighbor"
+    "la_boca_marker = neighborhood_markers"
    ]
   },
   {
